update steps, TODO files

--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -107,8 +107,9 @@ description = Displaying recent movement
 # VISUALIZER
 # show movements
 *.visualizer.*.mobilityVisualizer.displayVelocity = true
+*.visualizer.*.mobilityVisualizer.velocityLineWidth = 2
 *.visualizer.*.mobilityVisualizer.displayMovementTrail = true
-*.visualizer.*.mobilityVisualizer.movementTrailLineColor = "black"
+*.visualizer.*.mobilityVisualizer.movementTrailLineWidth = 2
 
 
 ######################################################################################################
@@ -123,7 +124,8 @@ description = Showing IP addresses
 *.visualizer.*.interfaceTableVisualizer.nodeFilter = "*.pedestrian*"
 *.visualizer.*.interfaceTableVisualizer.interfaceFilter = "wlan*"
 *.visualizer.*.interfaceTableVisualizer.backgroundColor = "white"
-*.visualizer.*.interfaceTableVisualizer.opacity = 0.8
+*.visualizer.*.interfaceTableVisualizer.fontColor = "black"
+*.visualizer.*.interfaceTableVisualizer.opacity = 1
 
 
 ######################################################################################################
@@ -218,7 +220,7 @@ description = Showing active data links
 
 # show VoIP data links
 *.visualizer.*.dataLinkVisualizer.packetNameFilter = "*VoIP*"
-*.visualizer.*.dataLinkVisualizer.lineColor = "green"
+*.visualizer.*.dataLinkVisualizer.lineColor = "orange"
 *.visualizer.*.dataLinkVisualizer.lineStyle = "solid"
 *.visualizer.*.dataLinkVisualizer.lineWidth = 4
 *.visualizer.*.dataLinkVisualizer.fadeOutHalfLife = 5s
@@ -283,7 +285,7 @@ network = VisualizationC
 *.pedestrianVideo.udpApp[0].serverAddress = "videoStreamServer"
 *.pedestrianVideo.udpApp[0].serverPort = 4000
 # can be changed or can be omitted
-*.pedestrianVideo.udpApp[0].startTime = 5s
+*.pedestrianVideo.udpApp[0].startTime = 7s
 
 # VISUALIZER
 # turn off communication and interface ranges
@@ -294,7 +296,7 @@ network = VisualizationC
 *.visualizer.*.dataLinkVisualizer.packetNameFilter = "*Video*"
 
 # routing table visualizer: routing table entries to videoStreamServer
-*.visualizer.*.routingTableVisualizer.subscriptionModule = ""
+*.visualizer.*.routingTableVisualizer.subscriptionModule = "*.pedestrian0"
 *.visualizer.*.routingTableVisualizer.destinationFilter = "*.videoStreamServer"
 *.visualizer.*.routingTableVisualizer.lineColor = "brown"
 *.visualizer.*.routingTableVisualizer.lineStyle = "solid"
@@ -380,8 +382,11 @@ network = VisualizationD
 *.pedestrian0.udpApp[0].stopTime = 40s
 
 # accesspoint & pedestrians wifi
+*.*.wlan[*].mgmt.numChannels = 2
 *.accessPoint0.wlan[0].mgmt.ssid = "inetwifi0"
+*.accessPoint0.wlan[*].radio.channelNumber = 0
 *.accessPoint1.wlan[0].mgmt.ssid = "inetwifi1"
+*.accessPoint1.wlan[*].radio.channelNumber = 1
 *.pedestrian0.wlan[0].agent.default_ssid = ""
 *.pedestrianVideo.wlan[0].agent.default_ssid = ""
 *.pedestrian1.wlan[0].agent.default_ssid = "inetwifi1"
@@ -405,7 +410,7 @@ network = VisualizationD
 *.visualizer.*.networkRouteVisualizer.lineColor = "red"
 *.visualizer.*.networkRouteVisualizer.lineStyle = "solid"
 *.visualizer.*.networkRouteVisualizer.lineWidth = 4
-*.visualizer.*.networkRouteVisualizer.fadeOutHalfLife = 8s
+*.visualizer.*.networkRouteVisualizer.fadeOutHalfLife = 5s
 
 
 [Config Visualization16]	# Displaying physical environment
@@ -494,13 +499,16 @@ network = VisualizationF
 *.accessPoint2.mobility.initialLatitude = 42.35606deg
 *.accessPoint2.mobility.initialLongitude = -71.06935deg
 *.accessPoint2.wlan[*].radio.transmitter.power = 1mW
+*.*.wlan[*].mgmt.numChannels = 4
 *.accessPoint2.wlan[0].mgmt.ssid = "inetwifi2"
+*.accessPoint2.wlan[*].radio.channelNumber = 3
 
 # accessPoint3 mobility & wlan
 *.accessPoint3.mobility.initialLatitude = 42.357007deg
 *.accessPoint3.mobility.initialLongitude = -71.0657737deg
 *.accessPoint3.wlan[*].radio.transmitter.power = 1mW
 *.accessPoint3.wlan[0].mgmt.ssid = "inetwifi3"
+*.accessPoint3.wlan[*].radio.channelNumber = 4
 
 # router2 mobility
 *.router2.mobility.initialLatitude = 42.3554667deg
@@ -546,15 +554,27 @@ network = VisualizationF
 *.visualizer.*.mediumVisualizer.displaySignals = false
 *.visualizer.*.mediumVisualizer.signalPropagationUpdateInterval = 0s
 
+#*.visualizer.*.mediumVisualizer.displayCommunicationRanges = true
+
 # obstacle loss visualizer: shows obstacle loss
 *.visualizer.*.obstacleLossVisualizer.displayIntersectionTrail = false
 *.visualizer.*.obstacleLossVisualizer.displayFaceNormalVectorTrail = false
+
+# show VoIP data links
+#*.visualizer.*.dataLinkVisualizer.packetNameFilter = "*VoIP*"
+#*.visualizer.*.dataLinkVisualizer.lineColor = "orange"
+#*.visualizer.*.dataLinkVisualizer.lineStyle = "solid"
+#*.visualizer.*.dataLinkVisualizer.lineWidth = 4
+#*.visualizer.*.dataLinkVisualizer.fadeOutHalfLife = 5s
+
+# turn on network routes
+*.visualizer.*.networkRouteVisualizer.packetNameFilter = "V*"
 
 # visualizer parameters
 *.visualizer.*.packetDropVisualizer.packetNameFilter = "**"
 *.visualizer.*.packetDropVisualizer.iconTintColor = "red"
 *.visualizer.*.packetDropVisualizer.iconTintAmount = 1
-*.visualizer.*.packetDropVisualizer.fadeOutHalfLife = 4s
+*.visualizer.*.packetDropVisualizer.fadeOutHalfLife = 5s
 
 
 [Config Visualization19]	# Displaying transport connections
@@ -579,12 +599,13 @@ description = Showing link breaks
 # PARAMETERS
 # videoStreamServer
 # makes the simulation faster. If all devices works, maybe turn it on
-**.tcpHost[0].tcpApp[0].tClose = 0.03s
+#**.tcpHost[0].tcpApp[0].tClose = 0.03s
+**.tcpHost[*].numTcpApps = 0
 
 # VISUALIZER
 # link break visualizer parameters
 *.visualizer.*.linkBreakVisualizer.nodeFilter = "**"
-*.visualizer.*.linkBreakVisualizer.fadeOutHalfLife = 4s
+*.visualizer.*.linkBreakVisualizer.fadeOutHalfLife = 5s
 
 
 [Config Visualization21]	# Visualizing handovers
@@ -603,9 +624,6 @@ description = Displaying changing routes
 # PARAMETERS
 
 # VISUALIZER
-# show VoIP data links
-*.visualizer.*.dataLinkVisualizer.packetNameFilter = "*VoIP*"
-
 # show transport connection
 *.visualizer.*.transportConnectionVisualizer.nodeFilter = "**"
 
