update text, update steps 18-23, update network

--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -50,7 +50,6 @@ network = VisualizationB
 *.visualizer.*.mediumVisualizer.interferenceRangeColor = "black"
 
 
-
 ######################################################################################################
 [Config Visualization04]	# Using 3D models for network nodes
 extends = Visualization03
@@ -360,21 +359,23 @@ network = VisualizationD
 # router0 dhcp
 *.router0.hasDHCP = true
 *.router0.dhcp.interface = "eth0"
-*.router0.dhcp.ipAddressStart = "192.168.0.11"
-*.router0.dhcp.subnetMask = "255.255.255.0"
+#*.router0.dhcp.ipAddressStart = "192.168.0.11"
+#*.router0.dhcp.subnetMask = "255.255.255.0"
 *.router0.dhcp.maxNumClients = 20
+*.router0.dhcp.numReservedAddresses = 10
 *.router0.dhcp.gateway = "192.168.0.1"
-*.router0.dhcp.dns = "192.168.0.1"
+#*.router0.dhcp.dns = "192.168.0.1"
 *.router0.dhcp.leaseTime = 3600s
 
 #router1 dhcp
 *.router1.hasDHCP = true
 *.router1.dhcp.interface = "eth0"
-*.router1.dhcp.ipAddressStart = "192.168.1.11"
-*.router1.dhcp.subnetMask = "255.255.255.0"
+#*.router1.dhcp.ipAddressStart = "192.168.1.11"
+#*.router1.dhcp.subnetMask = "255.255.255.0"
 *.router1.dhcp.maxNumClients = 10
+*.router1.dhcp.numReservedAddresses = 10
 *.router1.dhcp.gateway = "192.168.1.1"
-*.router1.dhcp.dns = "192.168.1.1"
+#*.router1.dhcp.dns = "192.168.1.1"
 *.router1.dhcp.leaseTime = 3600s
 
 # modify VoIP start time because of the dhcp
@@ -509,14 +510,14 @@ network = VisualizationF
 *.accessPoint2.wlan[*].radio.transmitter.power = 1mW
 *.*.wlan[*].mgmt.numChannels = 4
 *.accessPoint2.wlan[0].mgmt.ssid = "inetwifi2"
-*.accessPoint2.wlan[*].radio.channelNumber = 3
+*.accessPoint2.wlan[*].radio.channelNumber = 2
 
 # accessPoint3 mobility & wlan
 *.accessPoint3.mobility.initialLatitude = 42.357007deg
 *.accessPoint3.mobility.initialLongitude = -71.0657737deg
 *.accessPoint3.wlan[*].radio.transmitter.power = 1mW
 *.accessPoint3.wlan[0].mgmt.ssid = "inetwifi3"
-*.accessPoint3.wlan[*].radio.channelNumber = 4
+*.accessPoint3.wlan[*].radio.channelNumber = 3
 
 # router2 mobility
 *.router2.mobility.initialLatitude = 42.3554667deg
@@ -529,21 +530,23 @@ network = VisualizationF
 # router2 dhcp
 *.router2.hasDHCP = true
 *.router2.dhcp.interface = "eth0"
-*.router2.dhcp.ipAddressStart = "192.168.2.11"
-*.router2.dhcp.subnetMask = "255.255.255.0"
+#*.router2.dhcp.ipAddressStart = "192.168.2.11"
+#*.router2.dhcp.subnetMask = "255.255.255.0"
 *.router2.dhcp.maxNumClients = 10
+*.router2.dhcp.numReservedAddresses = 10
 *.router2.dhcp.gateway = "192.168.2.1"
-*.router2.dhcp.dns = "192.168.2.1"
+#*.router2.dhcp.dns = "192.168.2.1"
 *.router2.dhcp.leaseTime = 3600s
 
 # router3 dhcp
 *.router3.hasDHCP = true
 *.router3.dhcp.interface = "eth0"
-*.router3.dhcp.ipAddressStart = "192.168.3.11"
-*.router3.dhcp.subnetMask = "255.255.255.0"
+#*.router3.dhcp.ipAddressStart = "192.168.3.11"
+#*.router3.dhcp.subnetMask = "255.255.255.0"
 *.router3.dhcp.maxNumClients = 10
+*.router3.dhcp.numReservedAddresses = 10
 *.router3.dhcp.gateway = "192.168.3.1"
-*.router3.dhcp.dns = "192.168.3.1"
+#*.router3.dhcp.dns = "192.168.3.1"
 *.router3.dhcp.leaseTime = 3600s
 
 # tcp hosts mobility settings
@@ -585,7 +588,7 @@ description = Displaying transport connections
 # show VoIP data links
 *.visualizer.*.dataLinkVisualizer.packetNameFilter = "*tcp*"
 *.visualizer.*.dataLinkVisualizer.lineColor = "blue"
-*.visualizer.*.dataLinkVisualizer.lineStyle = "dotted"
+*.visualizer.*.dataLinkVisualizer.lineStyle = "dashed"
 *.visualizer.*.dataLinkVisualizer.fadeOutHalfLife = 0.1ms
 
 # transport connection visualizer
