--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -127,6 +127,7 @@ description = Showing IP addresses
 *.visualizer.*.interfaceTableVisualizer.backgroundColor = "yellow"
 *.visualizer.*.interfaceTableVisualizer.fontColor = "black"
 *.visualizer.*.interfaceTableVisualizer.opacity = 1
+#*.visualizer.*.interfaceTableVisualizer.content = "macAddress"
 
 
 ######################################################################################################
@@ -137,11 +138,14 @@ description = Showing wifi association
 # PARAMETERS
 
 # VISUALIZER
+# show pedestrians' wlan ip addresses
+*.visualizer.*.interfaceTableVisualizer.nodeFilter = ""
+
 # show wifi association
 *.visualizer.*.ieee80211Visualizer.nodeFilter = "**"
 *.visualizer.*.ieee80211Visualizer.interfaceFilter = "wlan*"
 
-
+######################################################################################################
 [Config Visualization08]	# Displaying transmissions & receptions
 extends = Visualization07
 description = Displaying transmissions & receptions
@@ -195,7 +199,7 @@ description = Showing active physical links
 # PARAMETERS
 
 # VISUALIZER
-# turn off propagating signals, because it makes the simulation slow
+# turn off propagating signals
 *.visualizer.*.mediumVisualizer.displaySignals = false
 *.visualizer.*.mediumVisualizer.signalPropagationUpdateInterval = 0s
 
@@ -361,7 +365,7 @@ network = VisualizationD
 *.router0.dhcp.interface = "eth0"
 #*.router0.dhcp.ipAddressStart = "192.168.0.11"
 #*.router0.dhcp.subnetMask = "255.255.255.0"
-*.router0.dhcp.maxNumClients = 20
+*.router0.dhcp.maxNumClients = 10
 *.router0.dhcp.numReservedAddresses = 10
 *.router0.dhcp.gateway = "192.168.0.1"
 #*.router0.dhcp.dns = "192.168.0.1"
