--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -20,7 +20,7 @@ network = VisualizationA
 *.visualizer.osgVisualizer.sceneVisualizerType = "SceneOsgEarthVisualizer"
 *.visualizer.osgVisualizer.sceneVisualizer.mapFile = "boston.earth"
 *.visualizer.osgVisualizer.sceneVisualizer.playgroundShading = false
-*.visualizer.osgVisualizer.sceneVisualizer.playgroundColor = "#000000"
+#*.visualizer.osgVisualizer.sceneVisualizer.playgroundColor = "#000000"
 *.visualizer.osgVisualizer.sceneVisualizer.playgroundOpacity = 0.1
 *.visualizer.osgVisualizer.sceneVisualizer.axisLength = 100m
 
@@ -59,8 +59,9 @@ description = Using 3D models for network nodes
 
 # VISUALIZER
 # change phone to a boxman
-*.pedestrian0.osgModel = "boxman.osgb.(0.06).scale.0,0,90.rot"
-*.pedestrian1.osgModel = "boxman.osgb.(0.06).scale.0,0,90.rot"
+*.pedestrian*.osgModel = "boxman.osgb.(0.06).scale.0,0,90.rot"
+#*.pedestrian1.osgModel = "boxman.osgb.(0.06).scale.0,0,90.rot"
+#*.pedestrian*.osgModelColor = "red"
 
 
 ######################################################################################################
@@ -162,7 +163,6 @@ description = Displaying transmissions & receptions
 *.pedestrian0.udpApp[0].destPort = 5000
 # can be changed or can be omitted
 *.pedestrian0.udpApp[0].startTime = 1s
-*.pedestrian0.udpApp[0].stopTime = 31s
 
 # voip receiver
 *.pedestrian1.udpApp[0].typename = "SimpleVoIPReceiver"
