update text, ini

--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -45,9 +45,9 @@ network = VisualizationB
 # VISUALIZER
 # display communication and interface ranges
 *.visualizer.*.mediumVisualizer.displayCommunicationRanges = true
-*.visualizer.*.mediumVisualizer.communicationRangeColor = "red"
+#*.visualizer.*.mediumVisualizer.communicationRangeColor = "red"
 *.visualizer.*.mediumVisualizer.displayInterferenceRanges = true
-*.visualizer.*.mediumVisualizer.interferenceRangeColor = "black"
+#*.visualizer.*.mediumVisualizer.interferenceRangeColor = "black"
 
 
 ######################################################################################################
@@ -60,7 +60,6 @@ description = Using 3D models for network nodes
 # VISUALIZER
 # change phone to a boxman
 *.pedestrian*.osgModel = "boxman.osgb.(0.06).scale.0,0,90.rot"
-#*.pedestrian1.osgModel = "boxman.osgb.(0.06).scale.0,0,90.rot"
 #*.pedestrian*.osgModelColor = "red"
 
 
@@ -146,6 +145,7 @@ description = Showing wifi association
 *.visualizer.*.ieee80211Visualizer.nodeFilter = "**"
 *.visualizer.*.ieee80211Visualizer.interfaceFilter = "wlan*"
 
+
 ######################################################################################################
 [Config Visualization08]	# Displaying transmissions & receptions
 extends = Visualization07
@@ -170,6 +170,9 @@ description = Displaying transmissions & receptions
 *.pedestrian1.udpApp[0].adaptivePlayoutDelay = true
 
 # VISUALIZER
+# turn off to show wifi association
+*.visualizer.*.ieee80211Visualizer.nodeFilter = ""
+
 # display transmissions & receptions
 *.visualizer.*.mediumVisualizer.displayTransmissions = true
 *.visualizer.*.mediumVisualizer.transmissionImage = "transmission.png"
@@ -177,6 +180,7 @@ description = Displaying transmissions & receptions
 *.visualizer.*.mediumVisualizer.receptionImage = "reception.png"
 
 
+######################################################################################################
 [Config Visualization09]	# Showing propagating signals
 extends = Visualization08
 description = Showing propagating signals
@@ -184,6 +188,9 @@ description = Showing propagating signals
 # PARAMETERS
 
 # VISUALIZER
+# show movements
+*.visualizer.*.mobilityVisualizer.displayVelocity = false
+
 # show propagating signals
 *.visualizer.*.mediumVisualizer.displaySignals = true
 *.visualizer.*.mediumVisualizer.signalPropagationUpdateInterval = 50ns
@@ -192,6 +199,7 @@ description = Showing propagating signals
 *.visualizer.osgVisualizer.mediumVisualizer.signalShape = "both"
 
 
+######################################################################################################
 [Config Visualization10]	# Showing active physical links
 extends = Visualization09
 description = Showing active physical links
@@ -639,7 +647,7 @@ description = Displaying changing routes
 
 [Config Visualization23]
 extends = Visualization22
-description = Karacsonyfa
+description = Summary
 
 # PARAMETERS
 # turn off tcp app
