Examples/hostautoconf: passed fingerprint test.

--- a/examples/adhoc/hostautoconf/omnetpp.ini
+++ b/examples/adhoc/hostautoconf/omnetpp.ini
@@ -2,9 +2,14 @@
 #debug-on-errors = true
 record-eventlog = true
 network = Scenario
-sim-time-limit = 60min
-
-cmdenv-express-mode = true
+# for validation
+#record-eventlog = true
+cmdenv-log-prefix = "%f %g [%l] "
+cmdenv-express-mode = false
+fingerprint-events="NOT(**.mac.**)"
+fingerprint = 000-000
+sim-time-limit = 100s
+# for validation
 
 *.hosts = 3
 
@@ -38,7 +43,9 @@ cmdenv-express-mode = true
 
 # for validation
 **.wlan[*].mac.qosStation = false
+**.wlan[*].*.dataBitrate = 54Mbps
 **.wlan[*].*.basicBitrate = 24Mbps
+**.wlan[*].*.multicastBitrate = 24Mbps
 **.wlan[*].*.controlBitrate = 1Mbps
 # for validation
 
