--- a/examples/adhoc/hostautoconf/omnetpp.ini
+++ b/examples/adhoc/hostautoconf/omnetpp.ini
@@ -2,9 +2,15 @@
 #debug-on-errors = true
 #record-eventlog = true
 network = Scenario
-sim-time-limit = 60min
-
-cmdenv-express-mode = true
+# for validation
+#record-eventlog = true
+cmdenv-log-prefix = "%f %g [%l] "
+cmdenv-express-mode = false
+fingerprint-events="NOT(**.mac.**)"
+fingerprint = 000-000
+sim-time-limit = 100s
+record-eventlog = true
+# for validation
 
 *.hosts = 3
 
@@ -36,7 +42,11 @@ cmdenv-express-mode = true
 
 # nic settings
 **.wlan[*].mgmtType = "Ieee80211MgmtAdhoc"
-**.wlan[*].bitrate = 2Mbps
+# for validation
+**.wlan[*].mac.qosStation = false
+**.wlan[*].*.basicBitrate = 24Mbps
+**.wlan[*].*.controlBitrate = 1Mbps
+# for validation
 
 **.wlan[*].mgmt.frameCapacity = 10
 **.wlan[*].mac.address = "auto"
