--- a/examples/adhoc/qos/omnetpp.ini
+++ b/examples/adhoc/qos/omnetpp.ini
@@ -68,6 +68,17 @@ sim-time-limit = 5s
 **.mac.maxQueueSize = 0
 **.mac.ctrl.typename = ${"OptimizedCollisionController","CollisionController"}
 #**.mac.ctn[*].backoffOptimization = false
+#for validation
+num-rngs = 5
+**.wlan[*].*.hcf.edca.edcaf[0].contention.rng-0 = 1
+**.wlan[*].*.hcf.edca.edcaf[1].contention.rng-0 = 2
+**.wlan[*].*.hcf.edca.edcaf[2].contention.rng-0 = 3
+**.wlan[*].*.hcf.edca.edcaf[3].contention.rng-0 = 4
+**.wlan[*].*.dataBitrate = 54Mbps
+**.wlan[*].*.basicBitrate = 24Mbps
+**.wlan[*].*.controlBitrate = 1Mbps
+**.wlan[*].*.hcf.edcaTxopProcedures[*].txopLimit = 0s
+#for validation
 
 [Config oldMacNonQos]
 extends = oldMacBase
