--- a/examples/wireless/crosstalk/omnetpp.ini
+++ b/examples/wireless/crosstalk/omnetpp.ini
@@ -1,9 +1,15 @@
 [General]
 network = Crosstalk
 tkenv-plugin-path = ../../../etc/plugins
-#record-eventlog = true
-sim-time-limit = 0.1s
 seed-set = 1
+# for validation
+cmdenv-log-prefix = "%f %g [%l] "
+cmdenv-express-mode = false
+fingerprint-events="NOT(**.mac.**)"
+fingerprint = 000-000
+sim-time-limit = 2s
+record-eventlog = true
+# for validation
 
 **.constraintAreaMinX = 0m
 **.constraintAreaMinY = 0m
