--- a/examples/wireless/dynamic/omnetpp.ini
+++ b/examples/wireless/dynamic/omnetpp.ini
@@ -23,3 +23,10 @@ tkenv-plugin-path = ../../../etc/plugins
 **.sourceNode[*].numPingApps = 1
 **.sourceNode[*].pingApp[*].destAddr = "destinationNode"
 **.pingApp[*].printPing = true
+
+#for validation
+**.wlan[*].*.dataBitrate = 54Mbps
+**.wlan[*].*.basicBitrate = 24Mbps
+**.wlan[*].*.multicastBitrate = 24Mbps
+**.wlan[*].*.controlBitrate = 1Mbps
+#for validation 
