--- a/examples/wireless/errorrate/omnetpp.ini
+++ b/examples/wireless/errorrate/omnetpp.ini
@@ -28,3 +28,10 @@ tkenv-plugin-path = ../../../etc/plugins
 **.receiver.snirThreshold = 0dB
 **.receiver.energyDetection = -100dBm
 **.receiver.sensitivity = -100dBm
+
+#for validation
+**.wlan[*].*.dataBitrate = 54Mbps
+**.wlan[*].*.basicBitrate = 24Mbps
+**.wlan[*].*.multicastBitrate = 24Mbps
+**.wlan[*].*.controlBitrate = 1Mbps
+#for validation 
