--- a/examples/wireless/handover/omnetpp.ini
+++ b/examples/wireless/handover/omnetpp.ini
@@ -58,3 +58,9 @@ tkenv-plugin-path = ../../../etc/plugins
 
 **.radio.transmitter.power = 2.0mW
 
+#for validation
+**.wlan[*].*.dataBitrate = 54Mbps
+**.wlan[*].*.basicBitrate = 24Mbps
+**.wlan[*].*.multicastBitrate = 24Mbps
+**.wlan[*].*.controlBitrate = 1Mbps
+#for validation 
