--- a/examples/wireless/hosttohost/omnetpp.ini
+++ b/examples/wireless/hosttohost/omnetpp.ini
@@ -53,3 +53,9 @@ tkenv-plugin-path = ../../../etc/plugins
 description = "6 hosts over AP"
 Throughput.numCli = 6
 
+#for validation
+**.wlan[*].*.dataBitrate = 54Mbps
+**.wlan[*].*.basicBitrate = 24Mbps
+**.wlan[*].*.multicastBitrate = 24Mbps
+**.wlan[*].*.controlBitrate = 1Mbps
+#for validation 
