--- a/examples/adhoc/ieee80211/omnetpp.ini
+++ b/examples/adhoc/ieee80211/omnetpp.ini
@@ -2,11 +2,18 @@
 network = Net80211
 #record-eventlog = true
 #eventlog-message-detail-pattern = *:(not declaredOn(cMessage) and not declaredOn(cNamedObject) and not declaredOn(cObject))
+# for validation
+cmdenv-log-prefix = "%f %g [%l] "
+cmdenv-express-mode = false
+fingerprint-events="NOT(**.mac.**)"
+fingerprint = 000-000
+sim-time-limit = 1000s
+record-eventlog = true
+# for validation
 
 num-rngs = 3
 **.mobility.rng-0 = 1
 **.wlan[*].mac.rng-0 = 2
-#debug-on-errors = true
 
 tkenv-plugin-path = ../../../etc/plugins
 
@@ -34,7 +41,12 @@ tkenv-plugin-path = ../../../etc/plugins
 **.pingApp[*].printPing = true
 
 # nic settings
-**.wlan[*].bitrate = 2Mbps
+#for validation
+**.wlan[*].*.dataBitrate = 54Mbps
+**.wlan[*].*.basicBitrate = 24Mbps
+**.wlan[*].*.multicastBitrate = 24Mbps
+**.wlan[*].*.controlBitrate = 1Mbps
+#for validation
 
 **.wlan[*].mgmt.frameCapacity = 10
 
