--- a/examples/dhcp/omnetpp.ini
+++ b/examples/dhcp/omnetpp.ini
@@ -1,6 +1,13 @@
 [General]
 tkenv-plugin-path = ../../../etc/plugins
-sim-time-limit = 100d
+# for validation
+record-eventlog = true
+cmdenv-log-prefix = "%f %g [%l] "
+cmdenv-express-mode = false
+fingerprint-events="NOT(**.mac.**)"
+fingerprint = 000-000
+sim-time-limit = 100s
+# for validation
 
 **.radio.displayCommunicationRange = true
 
