Examples: errorrate & lan802.11 fingerprint ok.

--- a/examples/wireless/lan80211/omnetpp.ini
+++ b/examples/wireless/lan80211/omnetpp.ini
@@ -1,9 +1,14 @@
 [General]
 network = Lan80211
-#cmdenv-output-file = omnetpp.log
-#debug-on-errors = true
 tkenv-plugin-path = ../../../etc/plugins
-#record-eventlog = true
+# for validation
+cmdenv-log-prefix = "%f %g [%l] "
+cmdenv-express-mode = true
+fingerprint-events="NOT(**.mac.**)"
+fingerprint = 000-000
+sim-time-limit = 100s
+record-eventlog = false
+# for validation
 
 **.constraintAreaMinX = 0m
 **.constraintAreaMinY = 0m
@@ -47,6 +52,13 @@ tkenv-plugin-path = ../../../etc/plugins
 **.wlan[*].radio.transmitter.bandwidth = 2MHz
 **.wlan[*].radio.receiver.sensitivity = -85dBm
 **.wlan[*].radio.receiver.snirThreshold = 4dB
+
+#for validation
+**.wlan[*].*.dataBitrate = 54Mbps
+**.wlan[*].*.basicBitrate = 24Mbps
+**.wlan[*].*.multicastBitrate = 24Mbps
+**.wlan[*].*.controlBitrate = 1Mbps
+#for validation 
 
 [Config Ping1]
 description = "host1 pinging host0"
