--- a/examples/wireless/errorrate/omnetpp.ini
+++ b/examples/wireless/errorrate/omnetpp.ini
@@ -1,7 +1,14 @@
 [General]
 network = ErrorRateTest
-sim-time-limit = 10s
 tkenv-plugin-path = ../../../etc/plugins
+# for validation
+cmdenv-log-prefix = "%f %g [%l] "
+cmdenv-express-mode = false
+fingerprint-events="NOT(**.mac.**)"
+fingerprint = 000-000
+sim-time-limit = 100s
+record-eventlog = true
+# for validation
 
 **.constraintAreaMinX = 0m
 **.constraintAreaMinY = 0m
@@ -28,3 +35,10 @@ tkenv-plugin-path = ../../../etc/plugins
 **.receiver.snirThreshold = 0dB
 **.receiver.energyDetection = -100dBm
 **.receiver.sensitivity = -100dBm
+
+#for validation
+**.wlan[*].*.dataBitrate = 54Mbps
+**.wlan[*].*.basicBitrate = 24Mbps
+**.wlan[*].*.multicastBitrate = 24Mbps
+**.wlan[*].*.controlBitrate = 1Mbps
+#for validation
