Examples: mobileipv6 fingerprint ok.

--- a/examples/mobileipv6/omnetpp.ini
+++ b/examples/mobileipv6/omnetpp.ini
@@ -11,15 +11,20 @@
 
 num-rngs = 3
 seed-set = 1
-**.gen[*].rng-0 = 1
-**.mobility.rng-0 = 2
+**.gen[*].rng-0 = 0
+**.mobility.rng-0 = 1
+**.wlan[*].rng-0 = 2
 
-#debug-on-errors = true
-#record-eventlog = true
+# for validation
+cmdenv-log-prefix = "%f %g [%l] "
+cmdenv-express-mode = false
+fingerprint-events="NOT(**.mac.**)"
+fingerprint = 000-000
+sim-time-limit = 25s
+record-eventlog = true
+# for validation
 
 network = mIPv6Network
-
-cmdenv-express-mode = true
 
 tkenv-plugin-path = ../../etc/plugins
 # tkenv-default-run = 1
@@ -216,7 +221,12 @@ tkenv-plugin-path = ../../etc/plugins
 **.wlan*.agent.associationTimeout = 5s
 
 # nic settings
-**.wlan*.bitrate = 2Mbps
+#for validation
+**.wlan[*].*.dataBitrate = 54Mbps
+**.wlan[*].*.basicBitrate = 54Mbps
+**.wlan[*].*.multicastBitrate = 24Mbps
+**.wlan[*].*.controlBitrate = 1Mbps
+#for validation
 
 **.mac.address = "auto"
 **.mac.maxQueueSize = 14
