Examples: lan80211 fingerprint ok

--- a/examples/wireless/lan80211/omnetpp.ini
+++ b/examples/wireless/lan80211/omnetpp.ini
@@ -3,11 +3,11 @@ network = Lan80211
 tkenv-plugin-path = ../../../etc/plugins
 # for validation
 cmdenv-log-prefix = "%f %g [%l] "
-cmdenv-express-mode = true
+cmdenv-express-mode = false
 fingerprint-events="NOT(**.mac.**)"
 fingerprint = 000-000
-sim-time-limit = 100s
-record-eventlog = false
+sim-time-limit = 25s
+record-eventlog = true
 # for validation
 
 **.constraintAreaMinX = 0m
@@ -34,9 +34,6 @@ record-eventlog = false
 *.host[0].pingApp[0].destAddr = ""
 *.host[*].pingApp[0].destAddr = "host[0]"
 *.host[*].pingApp[0].sendInterval = 10ms
-
-# nic settings
-**.wlan*.bitrate = 2Mbps
 
 **.mac.address = "auto"
 **.mac.maxQueueSize = 14
