--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -20,7 +20,7 @@ network = VisualizationA
 *.visualizer.osgVisualizer.sceneVisualizerType = "SceneOsgEarthVisualizer"
 *.visualizer.osgVisualizer.sceneVisualizer.mapFile = "boston.earth"
 *.visualizer.osgVisualizer.sceneVisualizer.playgroundShading = false
-#*.visualizer.osgVisualizer.sceneVisualizer.playgroundColor = "#000000"
+*.visualizer.osgVisualizer.sceneVisualizer.playgroundColor = "#000000"
 *.visualizer.osgVisualizer.sceneVisualizer.playgroundOpacity = 0.1
 *.visualizer.osgVisualizer.sceneVisualizer.axisLength = 100m
 
