--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -253,10 +253,13 @@ description = Displaying playout delay statistics
 # display playout delay statistic
 *.visualizer.*.statisticVisualizer.signalName = "VoIPPlayoutDelay"
 *.visualizer.*.statisticVisualizer.statisticName = "playoutDelay"
+*.visualizer.*.statisticVisualizer.sourcePathFilter = "*.pedestrian1.udpApp[0]"
 *.visualizer.*.statisticVisualizer.prefix = "Playout delay"
-*.visualizer.*.statisticVisualizer.unit = "s ms"
+*.visualizer.*.statisticVisualizer.unit = "ms"
 *.visualizer.*.statisticVisualizer.opacity = 0.8
-*.visualizer.*.statisticVisualizer.sourcePathFilter = "**.udpApp[0]"
+*.visualizer.*.statisticVisualizer.fontColor = "black"
+*.visualizer.*.statisticVisualizer.backgroundColor = "yellow"
+
 
 
 ######################################################################################################
@@ -317,6 +320,7 @@ network = VisualizationC
 *.visualizer.*.routingTableVisualizer.lineStyle = "solid"
 
 
+######################################################################################################
 [Config Visualization14]	# Displaying 802.11 channel access state
 extends = Visualization13
 description = Displaying 802.11 channel access state
@@ -340,6 +344,7 @@ description = Displaying 802.11 channel access state
 *.visualizer.*.infoVisualizer.content = "displayStringText"
 
 
+######################################################################################################
 [Config Visualization15]	# Showing active network routes
 extends = Visualization14
 description = Showing active network routes
@@ -430,6 +435,7 @@ network = VisualizationD
 *.visualizer.*.networkRouteVisualizer.fadeOutHalfLife = 3ms
 
 
+######################################################################################################
 [Config Visualization16]	# Displaying physical environment
 extends = Visualization15
 description = Displaying physical environment
@@ -449,6 +455,7 @@ network = VisualizationE
 # VISUALIZER
 
 
+######################################################################################################
 [Config Visualization17]	# Displaying obstacle loss
 extends = Visualization16
 description = Displaying obstacle loss
