--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -59,8 +59,10 @@ description = Using 3D models for network nodes
 
 # VISUALIZER
 # change phone to a boxman
-*.pedestrian*.osgModel = "boxman.osgb.(0.06).scale.0,0,90.rot"
-#*.pedestrian*.osgModelColor = "red"
+*.pedestrian0.osgModel = "boxman.osgb.(0.06).scale.0,0,90.rot"
+*.pedestrian1.osgModel = "boxman.osgb.(0.06).scale.0,0,90.rot"
+#*.pedestrian0.osgModelColor = "red"
+#*.pedestrian1.osgModelColor = "red"
 
 
 ######################################################################################################
@@ -289,7 +291,7 @@ network = VisualizationC
 *.videoStreamServer.mobility.coordinateSystemModule = "coordinateSystem"
 *.videoStreamServer.mobility.initialLatitude = 42.3554005deg
 *.videoStreamServer.mobility.initialLongitude = -71.0637636deg
-*.*Server.mobility.initialAltitude = 0.5m
+*.videoStreamServer.mobility.initialAltitude = 0.5m
 
 # videoStreamServer application
 *.videoStreamServer.numUdpApps = 1
@@ -631,6 +633,10 @@ description = Showing link breaks
 *.visualizer.*.dataLinkVisualizer.fadeOutHalfLife = 20ms
 
 # link break visualizer parameters
+# show wifi association
+*.visualizer.*.ieee80211Visualizer.nodeFilter = "**"
+*.visualizer.*.ieee80211Visualizer.interfaceFilter = "wlan*"
+
 *.visualizer.*.linkBreakVisualizer.nodeFilter = "**"
 *.visualizer.*.linkBreakVisualizer.fadeOutHalfLife = 5s
 
