--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -271,9 +271,6 @@ description = Showing routing tables
 network = VisualizationC
 
 # PARAMETERS
-# pedestrianVideo wlan
-*.pedestrianVideo.wlan[*].radio.transmitter.power = 0.7mW
-
 # initialize pedestrianVideo position
 *.pedestrianVideo.mobilityType = "StationaryMobility"
 *.pedestrianVideo.mobility.initialX = 468m
@@ -301,7 +298,10 @@ network = VisualizationC
 *.videoStreamServer.udpApp[0].packetLen = 1000B
 *.videoStreamServer.udpApp[0].videoSize = 50000000B
 
-# client application
+# pedestrianVideo wlan
+*.pedestrianVideo.wlan[*].radio.transmitter.power = 0.7mW
+
+# client (pedestrianVideo) application
 *.pedestrianVideo.numUdpApps = 1
 *.pedestrianVideo.udpApp[0].typename = "UDPVideoStreamCli"
 *.pedestrianVideo.udpApp[0].localPort = 4000
@@ -319,6 +319,7 @@ network = VisualizationC
 *.visualizer.*.routingTableVisualizer.subscriptionModule = "VisualizationC"
 *.visualizer.*.routingTableVisualizer.destinationFilter = "*.videoStreamServer"
 *.visualizer.*.routingTableVisualizer.lineColor = "brown"
+*.visualizer.*.routingTableVisualizer.lineWidth = 4
 *.visualizer.*.routingTableVisualizer.lineStyle = "solid"
 
 
