--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -339,12 +339,10 @@ description = Displaying 802.11 channel access state
 *.visualizer.*.statisticVisualizer.signalName = ""
 *.visualizer.*.statisticVisualizer.statisticName = ""
 
-#turn off ip address
-*.visualizer.*.interfaceTableVisualizer.nodeFilter = ""
-
-# info visualizer parameters: shows channel access state
+# info visualizer parameters: show channel access state
 *.visualizer.*.infoVisualizer.modules = "*.*.wlan[0].mac.ctn[0]"
 *.visualizer.*.infoVisualizer.content = "displayStringText"
+*.visualizer.*.infoVisualizer.backgroundColor = "yellow"
 
 
 ######################################################################################################
