update TODO, step 14 text WIP

--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -354,6 +354,7 @@ network = VisualizationD
 # PARAMETERS
 # configurate ipv4 addresses manually
 *.configurator.config = xmldoc("configurationD.xml")
+
 # configure rip
 *.router*.hasRIP = true
 *.configurator.optimizeRoutes = false
@@ -378,23 +379,17 @@ network = VisualizationD
 # router0 dhcp
 *.router0.hasDHCP = true
 *.router0.dhcp.interface = "eth0"
-#*.router0.dhcp.ipAddressStart = "192.168.0.11"
-#*.router0.dhcp.subnetMask = "255.255.255.0"
 *.router0.dhcp.maxNumClients = 10
-*.router0.dhcp.numReservedAddresses = 10
+*.router0.dhcp.numReservedAddresses = 11
 *.router0.dhcp.gateway = "192.168.0.1"
-#*.router0.dhcp.dns = "192.168.0.1"
 *.router0.dhcp.leaseTime = 3600s
 
 #router1 dhcp
 *.router1.hasDHCP = true
 *.router1.dhcp.interface = "eth0"
-#*.router1.dhcp.ipAddressStart = "192.168.1.11"
-#*.router1.dhcp.subnetMask = "255.255.255.0"
 *.router1.dhcp.maxNumClients = 10
-*.router1.dhcp.numReservedAddresses = 10
+*.router1.dhcp.numReservedAddresses = 11
 *.router1.dhcp.gateway = "192.168.1.1"
-#*.router1.dhcp.dns = "192.168.1.1"
 *.router1.dhcp.leaseTime = 3600s
 
 # modify VoIP start time because of the dhcp
@@ -405,10 +400,13 @@ network = VisualizationD
 
 # accesspoint & pedestrians wifi
 *.*.wlan[*].mgmt.numChannels = 2
+
 *.accessPoint0.wlan[0].mgmt.ssid = "inetwifi0"
 *.accessPoint0.wlan[*].radio.channelNumber = 0
+
 *.accessPoint1.wlan[0].mgmt.ssid = "inetwifi1"
 *.accessPoint1.wlan[*].radio.channelNumber = 1
+
 *.pedestrian0.wlan[0].agent.default_ssid = ""
 *.pedestrianVideo.wlan[0].agent.default_ssid = ""
 *.pedestrian1.wlan[0].agent.default_ssid = "inetwifi1"
@@ -430,7 +428,7 @@ network = VisualizationD
 # turn on network routes
 *.visualizer.*.networkRouteVisualizer.packetNameFilter = "VideoStrmPk"
 *.visualizer.*.networkRouteVisualizer.lineColor = "red"
-*.visualizer.*.networkRouteVisualizer.lineStyle = "solid"
+# *.visualizer.*.networkRouteVisualizer.lineStyle = "solid"		# should add lineStyle to RouteVisualizerBase?
 *.visualizer.*.networkRouteVisualizer.lineWidth = 4
 *.visualizer.*.networkRouteVisualizer.fadeOutMode = "simulationTime"
 *.visualizer.*.networkRouteVisualizer.fadeOutHalfLife = 3ms
@@ -665,12 +663,12 @@ description = Summary
 # PARAMETERS
 # turn off tcp app
 **.tcpHost[0].tcpApp[0].active = true
-**.tcpHost[0].tcpApp[0].tClose = 0.05s
+**.tcpHost[0].tcpApp[0].tClose = 0.03s
 
 # VISUALIZER
 # display communication and interface ranges
 *.visualizer.*.mediumVisualizer.displayCommunicationRanges = true
-*.visualizer.*.mediumVisualizer.communicationRangeColor = "red"
+*.visualizer.*.mediumVisualizer.communicationRangeColor = "blue"
 *.visualizer.*.mediumVisualizer.displayInterferenceRanges = true
 *.visualizer.*.mediumVisualizer.interferenceRangeColor = "black"
 
