Obstacle: fingerprints ok for all configurations.

--- a/examples/wireless/obstacle/omnetpp.ini
+++ b/examples/wireless/obstacle/omnetpp.ini
@@ -40,6 +40,13 @@ num-rngs = 3
 *.host[*].pingApp[*].destAddr = "host[0]"
 *.host[*].pingApp[*].printPing = true
 
+#for validation
+*.host[*].wlan[*].mac.dataBitrate = 54Mbps
+*.host[*].wlan[*].mac.basicBitrate = 24Mbps
+*.host[*].wlan[*].mac.multicastBitrate = 24Mbps
+*.host[*].wlan[*].mac.controlBitrate = 1Mbps
+#for validation
+
 [Config Outdoor]
 description = "Wireless nodes send pings while moving around the streets"
 
@@ -158,10 +165,3 @@ description = "Wireless nodes send pings while orbiting around a sphere"
 *.host[0].mobility.r = 400m
 *.host[*].mobility.r = 500m
 *.host[*].mobility.updateInterval = 100ms
-
-#for validation
-**.wlan[*].*.dataBitrate = 54Mbps
-**.wlan[*].*.basicBitrate = 24Mbps
-**.wlan[*].*.multicastBitrate = 24Mbps
-**.wlan[*].*.controlBitrate = 1Mbps
-#for validation
