--- a/examples/wireless/throughput/omnetpp.ini
+++ b/examples/wireless/throughput/omnetpp.ini
@@ -7,7 +7,7 @@ cmdenv-log-prefix = "%f %g [%l] "
 cmdenv-express-mode = false
 fingerprint-events="NOT(**.mac.**)"
 fingerprint = 000-000
-sim-time-limit = 20s
+sim-time-limit = 10s
 # for validation
 
 **.constraintAreaMinX = 0m
@@ -24,10 +24,12 @@ sim-time-limit = 20s
 **.mgmt.frameCapacity = 10
 
 # nic settings
-**.mac.dataBitrate = 1Mbps
+#for validation
+**.mac.dataBitrate = 54Mbps
 **.mac.basicBitrate = 24Mbps
+**.mac.multicastBitrate = 24Mbps
 **.mac.controlBitrate = 1Mbps
-**.mac.qosStation = false
+#for validation
 
 **.mac.maxQueueSize = 14
 **.mac.rtsThresholdBytes = 3000B
