--- a/examples/wireless/throughput/omnetpp.ini
+++ b/examples/wireless/throughput/omnetpp.ini
@@ -1,10 +1,15 @@
 [General]
 network = Throughput
-#cmdenv-output-file = omnetpp.log
 cmdenv-express-mode = false
-#debug-on-errors = true
 tkenv-plugin-path = ../../../etc/plugins
-#record-eventlog = true
+# for validation
+cmdenv-log-prefix = "%f %g [%l] "
+fingerprint-events="NOT(**.mac.**)"
+fingerprint = 000-000
+sim-time-limit = 20s
+record-eventlog = true
+# for validation
+
 
 **.constraintAreaMinX = 0m
 **.constraintAreaMinY = 0m
@@ -20,19 +25,18 @@ tkenv-plugin-path = ../../../etc/plugins
 **.mgmt.frameCapacity = 10
 
 # nic settings
-**.wlan*.bitrate = 1Mbps
-
-
+#for validation
+**.mac.dataBitrate = 54Mbps
+**.mac.basicBitrate = 24Mbps
+**.mac.multicastBitrate = 24Mbps
+**.mac.controlBitrate = 1Mbps
+#for validation
 
 **.mac.maxQueueSize = 14
 **.mac.rtsThresholdBytes = 3000B
 **.mac.retryLimit = 7
 **.mac.cwMinData = 31
 **.mac.cwMinBroadcast = 31
-
-
-
-
 
 **.radio.transmitter.power = 20mW
 **.radio.receiver.sensitivity = -85dBm
