--- a/examples/wireless/errorrate/omnetpp.ini
+++ b/examples/wireless/errorrate/omnetpp.ini
@@ -1,7 +1,14 @@
 [General]
 network = ErrorRateTest
-sim-time-limit = 10s
 tkenv-plugin-path = ../../../etc/plugins
+# for validation
+cmdenv-log-prefix = "%f %g [%l] "
+cmdenv-express-mode = false
+fingerprint-events="NOT(**.mac.**)"
+fingerprint = 000-000
+sim-time-limit = 100s
+record-eventlog = true
+# for validation
 
 **.constraintAreaMinX = 0m
 **.constraintAreaMinY = 0m
