--- a/examples/wireless/lan80211/omnetpp-ftp.ini
+++ b/examples/wireless/lan80211/omnetpp-ftp.ini
@@ -3,6 +3,14 @@ network = Lan80211
 #debug-on-errors = true
 tkenv-plugin-path = ../../../etc/plugins
 #record-eventlog = true
+# for validation
+cmdenv-log-prefix = "%f %g [%l] "
+cmdenv-express-mode = false
+fingerprint-events="NOT(**.mac.**)"
+fingerprint = 000-000
+sim-time-limit = 10s
+record-eventlog = true
+# for validation
 
 **.constraintAreaMinX = 0m
 **.constraintAreaMinY = 0m
@@ -47,8 +55,12 @@ tkenv-plugin-path = ../../../etc/plugins
 #**.pingApp[0].destAddr = "host[0]"
 #**.pingApp[0].printPing = true
 
-# nic settings
-**.wlan*.bitrate = 2Mbps
+#for validation
+**.wlan[*].*.dataBitrate = 54Mbps
+**.wlan[*].*.basicBitrate = 24Mbps
+**.wlan[*].*.multicastBitrate = 24Mbps
+**.wlan[*].*.controlBitrate = 1Mbps
+#for validation 
 
 **.mac.address = "auto"
 **.mac.maxQueueSize = 14
