--- a/examples/wireless/obstacle/omnetpp.ini
+++ b/examples/wireless/obstacle/omnetpp.ini
@@ -2,6 +2,14 @@
 network = ObstacleTest
 #debug-on-errors = true
 tkenv-plugin-path = ../../../etc/plugins
+# for validation
+cmdenv-log-prefix = "%f %g [%l] "
+cmdenv-express-mode = false
+fingerprint-events="NOT(**.mac.**)"
+fingerprint = 000-000
+sim-time-limit = 100s
+record-eventlog = true
+# for validation
 
 # random
 num-rngs = 3
@@ -31,6 +39,13 @@ num-rngs = 3
 *.host[*].numPingApps = 1
 *.host[*].pingApp[*].destAddr = "host[0]"
 *.host[*].pingApp[*].printPing = true
+
+#for validation
+**.wlan[*].*.dataBitrate = 54Mbps
+**.wlan[*].*.basicBitrate = 24Mbps
+**.wlan[*].*.multicastBitrate = 24Mbps
+**.wlan[*].*.controlBitrate = 1Mbps
+#for validation
 
 [Config Outdoor]
 description = "Wireless nodes send pings while moving around the streets"
