Example/handover: fingerprint OK.

--- a/examples/wireless/handover/omnetpp.ini
+++ b/examples/wireless/handover/omnetpp.ini
@@ -1,8 +1,13 @@
 [General]
 network = HandoverNetwork
 tkenv-plugin-path = ../../../etc/plugins
-#debug-on-errors = true
-#record-eventlog = true
+# for validation
+cmdenv-log-prefix = "%f %g [%l] "
+fingerprint-events="NOT(**.mac.**)"
+fingerprint = 000-000
+sim-time-limit = 1500s
+record-eventlog = true
+# for validation
 
 **.constraintAreaMinX = 0m
 **.constraintAreaMinY = 0m
@@ -38,7 +43,11 @@ tkenv-plugin-path = ../../../etc/plugins
 **.host.wlan[*].radio.channelNumber = 0  # just initially -- it'll scan
 
 # wireless configuration
-**.wlan*.bitrate = 2Mbps
+**.mac.dataBitrate = 54Mbps
+**.mac.basicBitrate = 54Mbps
+**.mac.multicastBitrate = 24Mbps
+**.mac.controlBitrate = 1Mbps
+#for validation
 
 **.wlan[*].agent.activeScan = true
 **.wlan[*].agent.default_ssid = ""
@@ -57,4 +66,3 @@ tkenv-plugin-path = ../../../etc/plugins
 **.wlan[*].mac.cwMinBroadcast = 31
 
 **.radio.transmitter.power = 2.0mW
-
