Examples/hiddennode: fingerprint OK.

--- a/examples/wireless/hiddennode/omnetpp.ini
+++ b/examples/wireless/hiddennode/omnetpp.ini
@@ -4,7 +4,14 @@ description = "It is a wireless network for simulating the hidden node problem"
 #cmdenv-output-file = omnetpp.log
 #debug-on-errors = true
 tkenv-plugin-path = ../../../etc/plugins
+# for validation
+cmdenv-log-prefix = "%f %g [%l] "
+fingerprint-events="NOT(**.mac.**)"
+fingerprint = 000-000
+sim-time-limit = 100s
 record-eventlog = true
+cmdenv-express-mode = true
+# for validation
 #num-rngs = 3
 #seed-1-mt = 0
 #seed-2-mt = 0
@@ -39,8 +46,11 @@ record-eventlog = true
 **.mgmt.frameCapacity = 10
 
 # nic settings
-**.wlan*.bitrate = 1Mbps
-**.wlan*.mac.basicBitrate = 1Mbps
+**.mac.dataBitrate = 54Mbps
+**.mac.basicBitrate = 54Mbps
+**.mac.multicastBitrate = 24Mbps
+**.mac.controlBitrate = 1Mbps
+#for validation
 
 **.mac.maxQueueSize = 14
 **.mac.rtsThresholdBytes = 3000B
